--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
-  "name": "webuntisclient",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^25.2.0",
-    "dotenv": "^17.2.3",
-    "ts-jest": "^29.4.6"
-  }
+    "name": "webuntis-client",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "bun test",
+        "test:watch": "bun test --watch",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "keywords": [
+        "webuntis",
+        "api",
+        "client"
+    ],
+    "author": "Dev-LeChacal",
+    "license": "MIT",
+    "type": "module",
+    "private": true,
+    "devDependencies": {
+        "@eslint/js": "^9.39.2",
+        "@types/node": "^25.2.0",
+        "eslint": "^9.39.2",
+        "globals": "^17.3.0",
+        "jiti": "^2.6.1",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.54.0"
+    },
+    "dependencies": {
+        "dotenv": "^17.2.3",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-unused-imports": "^4.3.0"
+    }
 }
