--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
     "name": "webuntis-client",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "bun test",
-        "test:watch": "bun test --watch",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
+    "description": "A Web Untis API Client",
+
+    "main": "dist/webuntis-client.js",
+    "module": "dist/webuntis-client.mjs",
+    "typings": "dist/webuntis-client.d.ts",
+
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Dev-LeChacal/WebUntisClient.git"
     },
+
     "keywords": [
         "webuntis",
         "api",
         "client"
     ],
+
     "author": "Dev-LeChacal",
     "license": "MIT",
-    "type": "module",
-    "private": true,
+    "private": false,
+
+    "files": [
+        "dist"
+    ],
+
     "devDependencies": {
         "@eslint/js": "^9.39.2",
+        "@types/bun": "^1.3.8",
         "@types/node": "^25.2.0",
         "eslint": "^9.39.2",
         "globals": "^17.3.0",
@@ -27,6 +36,7 @@
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.54.0"
     },
+
     "dependencies": {
         "dotenv": "^17.2.3",
         "eslint-plugin-simple-import-sort": "^12.1.1",
