--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*", "test.ts"]
+    "include": ["src/**/*", "tests/all.test.ts"]
 }
