--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,18 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "allowJs": true,
         "checkJs": true,
         "declaration": true,
+        "declarationMap": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src/**/*", "tests/all.test.ts"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist", "tests", "examples"]
 }
