--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript-eslint": "^8.54.0"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0"
